[gd_scene load_steps=17 format=3 uid="uid://bcwlhgtk7juot"]

[ext_resource type="Script" uid="uid://chaqvnyt8k3ba" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="Script" uid="uid://sc22ce7mdy2p" path="res://player/under_water_detector.gd" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://cucrhwwldey2w" path="res://player/holding_duck.png" id="3_i3pqv"]
[ext_resource type="AudioStream" uid="uid://bici3ufgw854l" path="res://player/scroll_in.ogg" id="4_boad6"]
[ext_resource type="AudioStream" uid="uid://jh6y26lkpre7" path="res://duck/suck_duck.ogg" id="4_qjkh3"]
[ext_resource type="AudioStream" uid="uid://bevgvss535d4g" path="res://duck/blow_duck.ogg" id="5_g6k8r"]
[ext_resource type="AudioStream" uid="uid://derxypdcgp4k8" path="res://player/scroll_out.ogg" id="5_rgyib"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g1dw6"]
friction = 0.2

[sub_resource type="SphereShape3D" id="SphereShape3D_rgyib"]
radius = 0.45

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_onrkg"]
albedo_color = Color(1, 0.424685, 0.41852, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_i3pqv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2hs0m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hqtel"]
albedo_color = Color(0.197937, 0.197937, 0.197937, 1)
metallic = 1.0
roughness = 0.1

[sub_resource type="BoxMesh" id="BoxMesh_sweqy"]
material = SubResource("StandardMaterial3D_hqtel")
size = Vector3(0.7, 0.385, 0.755)

[sub_resource type="SphereShape3D" id="SphereShape3D_4flbx"]
radius = 0.05

[sub_resource type="SphereShape3D" id="SphereShape3D_boad6"]
radius = 0.227574

[node name="Node3D" type="RigidBody3D"]
collision_layer = 3
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_g1dw6")
script = ExtResource("1_4flbx")

[node name="ground_detector" type="ShapeCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.448, 0)
shape = SubResource("SphereShape3D_rgyib")
target_position = Vector3(0, -0.045, 0)
margin = 0.01
max_results = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
material_override = SubResource("StandardMaterial3D_onrkg")
mesh = SubResource("CapsuleMesh_i3pqv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_2hs0m")

[node name="Camera3D" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1.26666e-07, 0.258819, 0.965926, -3.394e-08, 0.965926, -0.258819, -1, 0, 1.31134e-07, 0, 1.36197, 0)
current = true
fov = 70.0

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00037992, -0.24347)
mesh = SubResource("BoxMesh_sweqy")
skeleton = NodePath("../..")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -4.5)
collision_mask = 5
collide_with_areas = true

[node name="eye" type="Area3D" parent="Camera3D"]
monitoring = false
script = ExtResource("2_onrkg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Camera3D/eye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.025)
shape = SubResource("SphereShape3D_4flbx")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera3D/eye"]

[node name="water_effect" type="ColorRect" parent="Camera3D/eye/CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.298039, 0.713726, 0.811765, 0.466667)

[node name="HBoxContainer" type="VBoxContainer" parent="Camera3D/eye/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="padding" type="Control" parent="Camera3D/eye/CanvasLayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="holding_duck" type="TextureRect" parent="Camera3D/eye/CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.03
mouse_filter = 2
texture = ExtResource("3_i3pqv")
stretch_mode = 4
flip_h = true

[node name="zoom_in_sound" type="AudioStreamPlayer3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1.26666e-07, -3.394e-08, -1, 0.258819, 0.965926, 3.55271e-15, 0.965926, -0.258819, 1.31134e-07, -5.05209e-08, 0.0188153, -0.385261)
stream = ExtResource("4_boad6")
volume_db = -20.0

[node name="zoom_out_sound" type="AudioStreamPlayer3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1.26666e-07, -3.394e-08, -1, 0.258819, 0.965926, 3.55271e-15, 0.965926, -0.258819, 1.31134e-07, -5.05209e-08, 0.0188153, -0.385261)
stream = ExtResource("5_rgyib")
volume_db = -20.0

[node name="suck_duck_sound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qjkh3")
volume_db = -25.0

[node name="blow_duck_sound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("5_g6k8r")
volume_db = -25.0

[node name="step_sound_selector" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 16
collision_mask = 16
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="step_sound_selector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.121098, 0)
shape = SubResource("SphereShape3D_boad6")
